<resources>
    <string name="app_name">Memory game</string>
    <string name="start_button">Start</string>
    <string name="empty_button">--</string>
    <string name="alpha">Alpha</string>
    <string name="beta">Beta</string>
    <string name="citta">Citta</string>
    <string name="gamma">Gamma</string>
    <string name="delta">Delta</string>
    <string name="lamnda">Lamnda</string>

</resources>